# CursorLocker

./: .gitignore  CMakeLists.txt  Common.h  CreateReleaseFolder.bat  CursorLocker.sln  CursorLocker.vcxproj  CursorLocker.vcxproj.filters  ExeIcon.rc  LICENSE  Main.cpp  ProgramArgs.cpp  README.md  exesConfig.ecfg
.github/workflows/: buildCursorLocker.yml  cmake.yml  deployCursorLocker.yml
src/: CMakeLists.txt  Common.h  Main.cpp  Monitors.cpp  Monitors.h  Processes.cpp  Processes.h  ProgramArgs.cpp  ProgramArgs.h  Timer.cpp  help.ht
src/include/: Common.h  Monitors.h  Processes.h  ProgramArgs.h  Timer.h  help.ht
tools/: CreateReleaseFolder.bat
